--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,5 @@ PORT=9100
 MONGO_HOST=mongodb://localhost:27017/africave-rest-api
 MONGO_PORT=27017
 JWT_SECRET=ZXiLFrmNg7IUMrkjZhq7XZNfnr4oAse1
+TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxx
+TWILIO_SID=ACxxxxxxxxxxxxxxxxxxxx
